Fixing theme alignment for small screens

--- a/src/components/contents/Theme.scss
+++ b/src/components/contents/Theme.scss
@@ -49,6 +49,7 @@
     }
 
     &--title {
+      text-align: center;
       font-weight: 500; //medium
 
       &.open {
